--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,15 @@
     "description": "This is a oauth2 login.",
     "type": "library",
     "keywords": ["yii2","extension","OAuth2"],
-    "license": "MIT",
+    "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "xmyl",
             "email": "xmylme@qq.com"
         }
     ],
+    "minimum-stability": "master",
+    "prefer-stable": true,
     "require": {
         "php": ">=5.5",
         "yiisoft/yii2-httpclient": "*"
