--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
             "email": "xmylme@qq.com"
         }
     ],
-    "minimum-stability": "master",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
         "php": ">=5.5",
