--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=5.5",
-        "yiisoft/yii2-httpclient": "*"
+        "yiisoft/yii2-httpclient": "~2.0.0"
     },
     "autoload": {
         "psr-4": {
